# oauth-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  test_client.py
src/: main.py
src/auth/providers/: google_provider.py  outreach_provider.py  provider.py  provider_registry.py  salesforce_provider.py
src/auth/tokens/: bearer_token.py  outreach_token.py  salesforce_token.py
src/mcp_tools/outreach/: outreach.py
src/mcp_tools/salesforce/: salesforce.py
src/utils/: errors.py
